infrastructure/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: istio-system
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: homelab-wildcard-cert
      hosts:
        - "*.kovachev-projects.com"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.kovachev-projects.com"
      tls:
        httpsRedirect: true
